# Trade-Simulator

./: CMakeLists.txt  Dockerfile  LICENSE  readme.md
.github/workflows/: docker-image.yml
algos/: simulation_algo_definitions.cpp
config/: simulation_config.json
src/: CMakeLists.txt  algo.h  input_data_service.h  nan_check_util.h  output_data_service.h  shared_memory_wrapper.h  simulation_config.h  simulation_engine.h  trade_simulator.cpp
tests/: random_test.cpp
